# llm-blender-modeling

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  batch_generate.sh  convert_model.sh  generate.sh  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: run_blendernet.yaml
notebooks/: hf_check.ipynb
src/: config.py  main.py
src/blender_utils/: __init__.py  render.py  run_script.py
src/llm_utils/: __init__.py
tests/: __init__.py  test_main.py
vllm_blender/: __init__.py  main.py
